--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -17,7 +17,10 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build Docker image
-      run: docker build -t muslimuwi/car-rental .
+      run: docker-compose build
+      
+    - name: Tag image with desired name
+      run: docker tag car-rental_car-rental:latest muslimuwi/car-rental
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
